# NWT-Ball-Launcher

./: README.md
camera/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
camera/main/: CMakeLists.txt  api_client.h  app_camera.cpp  app_camera.h  camera_pins.h  main.cpp  motor_control.cpp  motor_control.h  person_detect_model_data.h  person_detection.cpp  person_detection.h  sd_card.cpp  sd_card.h  sd_utils.cpp  sd_utils.h  web_server.cpp  web_server.h
camera/main/web/: index.html
esp32-tests/servo/: README.md
esp32-tests/servo/main/: main.c
esp32-tests/stepper-motor/: README.md
raspi-tests/: README.md
raspi-tests/camera-stepper/: README.md  config.json  conversion.py  main.py
raspi-tests/person-tracking/: README.md  main.py
raspi-tests/servo/: README.md  main.py
raspi-tests/stepper-motor/: README.md  full_step.py  stepper.py
tests/person-detection-linux/: .gitignore  CMakeLists.txt  README.md
tests/person-detection-linux/main/: .main.cpp.kate-swp  CMakeLists.txt  main.cpp
tests/person-detection-linux/main/web/: index.html  style.css
tests/servo/: CMakeLists.txt  README.md
tests/servo/main/: main.c
tests/stepper-motor/: .gitignore
tests/stepper-motor/main/: main.c
tests/webserver-test/: CMakeLists.txt  README.md
tests/webserver-test/main/: main.c
